--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,7 @@
 }
 
 /*globals*/
-p,li,span,label,h1,h2,h3,h4,h5,h6,select,input {
+p,li,span,label,h1,h2,h3,h4,h5,h6,select,input,table {
 	font-family: "Open Sans"
 }
 
@@ -123,64 +123,31 @@ span.input-group-addon {
 	color: white;
 }
 
+/*map*/
 #wrapper {
 	padding-left:312px;
 	position:relative;
 }
 
-#userList {
-	margin:0 0 30px 0;
-}
-	#userList table {
-		border-collapse:separate;
-		border-spacing:1px;
-		background:#CCC;
-	}
-		#userList table th {
-			background:#EEE;
-			font-weight:600;
-			padding:10px 20px;
-			text-align:center;
-		}
-		#userList table tbody {
-			padding:0; margin:0;
-			border-collapse:collapse;
-			border-spacing:0px;
-		}
-			#userList table td {
-				background:#FFF;
-				padding:5px 10px;
-				text-align:center;
-			}
-
-#userInfo {
-	width:250px;
-	position:absolute;
-	top:0; left:0;
-}
-	#userInfo p {
-		padding:15px;
-		border:1px solid #CCC;
-		background:rgba(80,120,255,0.05);
-	}
-
-fieldset {
-	border:0;
-	padding:0; margin:0;
-}
-#userinfo {
-    border: 0px;
-    border-color: #fff;
-}
-
 #map {
+/*
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+*/
+    width: 100px;
+    height:600px;
+    min-height: 100%;
+    min-width: 100%;
+    display: block;
+	margin-bottom: 15px;
 }
-
-small {
-    font-size: 1rem;
+.fill
+{
+    min-height: 100%;
+    height: 100%;
+    width: 100%;
+    min-width: 100%;
 }
