--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,47 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 /*Color Pallettes*/
 
-.bc-0-0 {background-color: #7FA1FF;}
-.bc-0-1 {background-color: #E2EAFF;}
-.bc-0-2 {background-color: #A9C0FF;}
-.bc-0-3 {background-color: #5985FF;}
-.bc-0-4 {background-color: #2F66FC;}
-.fc-0-0 {color: #7FA1FF;}
-.fc-0-1 {color: #E2EAFF;}
-.fc-0-2 {color: #A9C0FF;}
-.fc-0-3 {color: #5985FF;}
-.fc-0-4 {color: #2F66FC;}
+.bc-0-0 {
+	background-color: #7FA1FF;
+}
 
+.bc-0-1 {
+	background-color: #E2EAFF;
+}
+
+.bc-0-2 {
+	background-color: #A9C0FF;
+}
+
+.bc-0-3 {
+	background-color: #5985FF;
+}
+
+.bc-0-4 {
+	background-color: #2F66FC;
+}
+
+.fc-0-0 {
+	color: #7FA1FF;
+}
+
+.fc-0-1 {
+	color: #E2EAFF;
+}
+
+.fc-0-2 {
+	color: #A9C0FF;
+}
+
+.fc-0-3 {
+	color: #5985FF;
+}
+
+.fc-0-4 {
+	color: #2F66FC;
+}
 /* make sidebar nav vertical */
+
 @media (min-width: 768px) {
 	.sidebar-nav .navbar .navbar-collapse {
 		padding: 0;
@@ -37,44 +66,64 @@
 		color: white;
 	}
 }
-
 /*nav and panel overrides*/
+
 .navbar-default .navbar-nav > li > a {
 	color: #fff;
 }
+
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
 	color: #fff;
 	background-color: #2F66FC;
 }
+
 .panel-default>.panel-heading {
 	color: #fff;
 	background-color: #7FA1FF;
 	border-color: #ddd;
 }
+
 .panel-default>.panel-heading:hover,
 .panel-default>.panel-heading:focus {
 	background-color: #2F66FC;
 }
+
 .panel-body {
 	background-color: #E2EAFF
 }
+
 .panel-body p,
 .panel-body li {
 	font-family: "Open Sans";
 	font-size: 0.9em;
 }
-
 /*globals*/
-p,li,span,label,h1,h2,h3,h4,h5,h6,select,input,table {
+
+p,
+li,
+span,
+label,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+select,
+input,
+table {
 	font-family: "Open Sans";
 }
+
 .pull-left {
 	margin-right: 5px;
 }
+
 ul {
-    list-style-type: none;
+	list-style-type: none;
 }
+
 body {
 	background-attachment: fixed;
 	background-image: linear-gradient(white, #E2EAFF, white);
@@ -84,17 +133,19 @@ body {
 	height: auto;
 	width: auto;
 }
+
 span.big {
 	font-size: 4em;
 }
-
 /*calc*/
+
 svg {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-family: "Open Sans";
 	font-size: .75em;
 }
+
 .chartBar text {
 	fill: #333;
 	font-size: 1.15em;
@@ -104,10 +155,12 @@ svg {
 .jp7 {
 	display: none;
 }
+
 span.input-group-addon {
-	background-color: #7FA1FF ;
+	background-color: #7FA1FF;
 	color: white;
 }
+
 .results {
 	font-family: "Open Sans";
 	color: #333333;
@@ -119,6 +172,7 @@ span.input-group-addon {
 	word-wrap: normal;
 	white-space: normal;
 }
+
 .stats {
 	font-family: "Open Sans";
 	font-size: 1em;
@@ -131,47 +185,44 @@ span.input-group-addon {
 	background-color: #fff;
 	margin: 0px 5px 5px 0px;
 }
+
 .btn {
 	color: white;
 	background-color: #7FA1FF
 }
+
 .btn:hover,
-.active{
+.active {
 	background-color: #2F66FC;
 	color: white;
 }
-
-
 /*map*/
+
 #wrapper {
-	padding-left:312px;
-	position:relative;
+	padding-left: 312px;
+	position: relative;
 }
 
 #map {
-/*
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-*/
-    width: 100px;
-    height:500px;
-    min-height: 100%;
-    min-width: 100%;
-    display: block;
+	width: 100px;
+	height: 500px;
+	min-height: 100%;
+	min-width: 100%;
+	display: block;
 	margin-bottom: 15px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
 }
-.fill
-{
-    min-height: 100%;
-    height: 100%;
-    width: 100%;
-    min-width: 100%;
+
+.fill {
+	min-height: 100%;
+	height: 100%;
+	width: 100%;
+	min-width: 100%;
 }
+
 i.fa {
-    font-size: 1.25em;
+	font-size: 1.25em;
 }
 /*
 #r1 { background-color: lightgreen; }
