--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,45 +1,26 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-/*Color Pallettes*/
-
-.bc-0-0 {
-	background-color: #c6d9ff;
+/*Color Palettes*/
+:root {
+	--color-1:#E6E8FF;
+	--color-2:#B8B9CC;
+	--color-3:#73747F;
+	--color-4:#99A2FF;
+	--color-5:#61647F;
 }
-
-.bc-0-1 {
-	background-color: #d7ffe1;
+.bc-0-0, .fc-0-0 {
+	background-color: var(--color-1);
 }
-
-.bc-0-2 {
-	background-color: #c8c2ff;
+.bc-0-1, .fc-0-1 {
+	background-color: var(--color-2);
 }
-
-.bc-0-3 {
-	background-color: #ffc6c1;
-	/*background-color: #821A16;*/
+.bc-0-2, .fc-0-2 {
+	background-color: var(--color-3);
 }
-
-.bc-0-4 {
-	background-color: #FF6500;
+.bc-0-3, .fc-0-3 {
+	background-color: var(--color-4);
 }
-
-.fc-0-0 {
-	color: #c6d9ff;
-}
-
-.fc-0-1 {
-	color: #d7ffe1;
-}
-
-.fc-0-2 {
-	color: #c8c2ff;
-}
-
-.fc-0-3 {
-	color: #ffc6c1;
-}
-
-.fc-0-4 {
-	color: #FF6500;
+.bc-0-4, .fc-0-4 {
+	background-color: var(--color-5);
 }
 /* make sidebar nav vertical */
 
@@ -78,17 +59,17 @@
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
 	color: #373737;
-	background-color: #d7ffe1;
+	background-color: #B8B9CC;
 }
 .panel {
-    background-color: #c8c2ff;
+    background-color: #73747F;
 }
 .panel-default {
     border-color: #111   
 }
 .panel-default>.panel-heading {
 	color: #373737;
-	background-color: #d7ffe1;
+	background-color: #B8B9CC;
 	border-color: #111;
 }
 .panel-default>.panel-heading:hover,
@@ -97,7 +78,7 @@
 	color: #222;
 }
 .panel-body {
-	background-color: #c8c2ff;
+	background-color: #73747F;
     margin: 3px;
     border-top-color: #111;
     border-radius: 3px;
@@ -146,7 +127,7 @@ ul {
 
 body {
 	background-attachment: fixed;
-	background-image: linear-gradient(#c6d9ff, #ffffff, #c6d9ff);
+	background-image: linear-gradient(#E6E8FF, #ffffff, #E6E8FF);
 	box-sizing: border-box;
 	display: block;
 	font-family: "Open Sans";
@@ -161,7 +142,7 @@ span.med {
 	font-size: 2em;
 }
 .img-thumbnail {
-    background-color: #c8c2ff;
+    background-color: #73747F;
     border-color: #111;
 }
 /*calc*/
@@ -184,7 +165,7 @@ svg {
 }
 
 span.input-group-addon {
-	background-color: #d7ffe1;
+	background-color: #B8B9CC;
 	color: white;
 }
 
@@ -214,7 +195,7 @@ span.input-group-addon {
 }
 
 .btn {
-	background-color: #d7ffe1
+	background-color: #B8B9CC
 }
 .btn, .btn:hover, .btn:focus {
     	color: white;   
@@ -272,30 +253,9 @@ text {
     padding-top: 5px;
 }
 .modal-body, .modal-header, .modal-footer {
-    background-color: #c8c2ff;
+    background-color: #73747F;
     border-top: transparent;
     border-bottom: transparent;
-}
-
-.leaflet-popup-content-wrapper,
-.leaflet-popup-tip {
-    background-color: #c8c2ff;
-}
-.leaflet-control, .leaflet-bar a, .leaflet-control-zoom-in, .leaflet-control-zoom-out {
-    background-color: #c8c2ff;
-    border-bottom: none;
-    border-top: none;
-}
-.leaflet-bar a:hover, .leaflet-bar a:focus {
-    background-color: #ffb071;
-        border-bottom: none;
-    border-top: none;
-}
-.leaflet-control-attribution {
-    visibility: hidden;   
-}
-.leaflet-popup-content {
-    color: #373737;
 }
 
 /*
