--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,6 +164,7 @@ svg {
 
 .jp7 {
     display: none;
+    width: 100%;
 }
 
 span.input-group-addon {
@@ -183,7 +184,7 @@ span.input-group-addon {
     white-space: normal;
 }
 
-.stats {
+/*.stats {
     font-family: "Open Sans";
     font-size: 1em;
     width: 110px;
@@ -194,7 +195,7 @@ span.input-group-addon {
     border-radius: 4px;
     background-color: var(--color-A);
     margin: 0px 5px 5px 0px;
-}
+}*/
 
 .btn {
     background-color: var(--color-3);
