Fine tuning complete

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,26 +6,28 @@
 <% include ../partials/nav %>
 
 <div class="container-fluid">
-    <div class="row" style="padding-bottom: 10px;"></div>
-<section name="jumbotron">
-    <div class="jumbotron text-center">
-        <h1>I Have Never Been A Good Developer</h1>
-        <div class="card-body text-left">
-        <p>PERSON: Hey Caleb, this website SUCKS!!!</p>
-        <p>CALEB: I know. This was just meant to be a place for me to practice my meager skills and dump my resume. Sometimes I redevelop whole portions of it for no reason at all; it's all basically a giant experiment. Don't read into it too much.</p>
-        <p></p>
-        <p>Check me out on:</p>
-        <ul>
-            <li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
-            </li>
-            <li><a href="https://www.facebook.com/kirishoru"><i class="fa fa-facebook-square"></i> Facebook</a>
-            </li>
-            <li><a href="https://www.linkedin.com/pub/caleb-barger/15/82/54a"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
-            </li>
-        </ul>
+    <div class="row mb-3"></div>
+    <section name="jumbotron">
+        <div class="jumbotron text-center">
+            <h1>I Have Never Been A Good Developer</h1>
+            <div class="card-body text-left">
+                <p class="mb-2">PERSON: Hey Caleb, this website SUCKS!!!</p>
+                <p class="mb-2">CALEB: I know. This was just meant to be a place for me to practice my meager skills and
+                    dump my resume. Sometimes I redevelop whole portions of it for no reason at all; it's all basically
+                    a giant experiment. Don't read into it too much.</p>
+                <p class="mb-1">Check me out on:</p>
+                <ul>
+                    <li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
+                    </li>
+                    <li><a href="https://www.facebook.com/kirishoru"><i class="fa fa-facebook-square"></i> Facebook</a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/pub/caleb-barger/15/82/54a"><i
+                                    class="fa fa-linkedin-square"></i> LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 </div>
 </body>
 </html>
