--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -5,11 +5,10 @@
 <% include ../partials/nav %>
 
 <div class="container-fluid">
-    <div class="row" style="padding-bottom: 10px;"></div>
+    <div class="row mb-3"></div>
     <section name="jumbotron">
         <div class="jumbotron text-center">
             <h1>Coming Soon</h1>
-            </div>
         </div>
     </section>
 </div>
