--- a/views/pages/bot.ejs
+++ b/views/pages/bot.ejs
@@ -8,20 +8,15 @@
 <% include ../partials/nav %>
 
 <div class="container-fluid">
-    <div class="row" style="padding-bottom: 10px;"></div>
-     <section name="jumbotron">
-            <div class="jumbotron text-center">
-                <h1>Resume Bullet Generator</h1>
-                <div class="card-body text-left">
-                    <p>I made a resume bullet generator by feeding every sentence in my resume into a Markov engine.
-                        It's
-                        kinda funny.</p>
-                    <button id="generate" class="btn"></button>
-                    <div class="row" style="padding-bottom: 20px;"></div>
-                    <h3 id="generated_title"></h3>
-                </div>
-            </div>
-        </section>
+    <div class="row mb-3"></div>
+    <div class="card">
+        <h1 class="card-header">Resume Bullet Generator</h1>
+        <div class="card-body text-left">
+            <p>I made a resume bullet generator by feeding every sentence in my resume into a Markov engine. It's kinda funny.</p>
+            <button id="generate" class="btn mb-3"></button>
+            <h4 id="generated_title"></h4>
+        </div>
+    </div>
 </div>
 <script src="../../public/js/markov.js"></script>
 
