--- a/views/pages/calc.ejs
+++ b/views/pages/calc.ejs
@@ -8,7 +8,7 @@
 <% include ../partials/nav %>
 
 <div class="container-fluid">
-    <div class="row" style="padding-bottom: 10px;"></div>
+    <div class="row mb-3"></div>
 
     <div class="row">
         <div class="col-sm-12">
