--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -10,7 +10,7 @@
 <!--Start Resume Page Content-->
 
 <div class="container-fluid">
-    <div class="row" style="padding-bottom: 10px;"></div>
+    <div class="row mb-3"></div>
     <div class="row">
 
         <div class="col-sm-auto">
@@ -24,7 +24,7 @@
                     </p>
                 </div>
             </div>
-            <div id="scroll-list" class="card-body mb-3"></div>
+            <div id="scroll-list" class="card" style="max-width: 18rem;"></div>
         </div>
 
         <!--Start dynamic resume-->
