--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,35 +58,6 @@
     background-color: var(--color-4);
 }
 
-.panel, .panel-default {
-    background-color: var(--color-3);
-    border-color: var(--color-3);
-}
-
-.panel-default > .panel-heading {
-    color: var(--color-2);
-    background-color: var(--color-3);
-}
-
-.panel-default > .panel-heading:hover,
-.panel-default > .panel-heading:focus {
-    background-color: var(--color-4);
-    color: var(--color-1);
-}
-
-.panel-body, .panel-body p, .panel-body li, .panel-body a {
-    background-color: var(--color-1);
-    margin: 1px;
-    border-radius: 3px;
-    font-family: "Open Sans";
-    font-size: 0.9em;
-    color: var(--color-3);
-}
-
-.panel-default > .panel-heading + .panel-collapse > .panel-body {
-    border-top-color: transparent;
-}
-
 #scroll-card {
     max-height: 90vh;
     overflow-y: scroll;
@@ -119,11 +90,11 @@
     -webkit-border-radius: 7px;
 }
 
-/*globals*/
-/*p, li, span, label, h1, h2, h3, h4, h5, h6, select, input, table, small {
-	font-family: "Open Sans";
-    color: var(--color-3);
-}*/
+.footer {
+    height: 40px;
+    line-height: 40px;
+}
+
 div > small {
     color: var(--color-1);
 }
