--- a/views/pages/calc.ejs
+++ b/views/pages/calc.ejs
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col-sm-6">
 
-                    <div class="card">
+                    <div class="card mb-3">
                         <h3 class="card-header">Body Stats</h3>
                         <div class="card-body">
 
@@ -153,6 +153,8 @@
     </div>
 </div>
 <script src="../../public/js/script.js"></script>
+
+<% include ../partials/footer %>
 
 </body>
 
