--- a/views/pages/calc.ejs
+++ b/views/pages/calc.ejs
@@ -139,7 +139,7 @@
 
 
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card mb-5">
                     <h3 class="card-header">Results</h3>
                     <div class="card-body">
                         <button type='button' class='btn btn-block' id='btn2'>Clear Results</button>
