--- a/views/pages/bot.ejs
+++ b/views/pages/bot.ejs
@@ -9,7 +9,7 @@
 
 <div class="container-fluid">
     <div class="row mb-3"></div>
-    <div class="card">
+    <div class="card mb-5">
         <h1 class="card-header">Resume Bullet Generator</h1>
         <div class="card-body text-left">
             <p>I made a resume bullet generator by feeding every sentence in my resume into a Markov engine. It's kinda funny.</p>
