--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,11 +16,14 @@
                     dump my resume. Sometimes I redevelop whole portions of it for no reason at all; it's all basically
                     a giant experiment. Don't read into it too much.</p>
             </div>
+            <!--<button type='button' class='btn btn-block' id='btnTMP'>TEMP</button>-->
+
         </div>
     </section>
 </div>
 
 <% include ../partials/footer %>
+<!--<script type="text/javascript" src="../../public/js/script.js"></script>-->
 
 </body>
 </html>
