--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,15 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--<script type="text/javascript" src="../../public/js/bootstrap.min.js"></script>-->
-    <!--<script type="text/javascript" src="../../public/js/jquery-3.3.1.min.js"></script>-->
-
+    <script>const exports = {};</script>
     <script type="text/javascript" src="../../public/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../../public/js/bootstrap.min.js"></script>
-    <!--<script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-
+    <script data-main="../../public/js/script" src="../../public/js/require.js"></script>
 
     <link rel="icon" href="../../public/img/favicon.ico" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../public/css/bootstrap.min.css">
