adding Relic support

--- a/views/pages/baelic.ejs
+++ b/views/pages/baelic.ejs
@@ -29,7 +29,7 @@
 
 <!--End Resume Page Content-->
 
-<script type="text/javascript" src="../../public/js/resume.js"></script>
+<script type="text/javascript" src="../../public/js/baelic.js"></script>
 
 <% include ../partials/footer %>
 
