adding Relic support

--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -5,7 +5,7 @@
 
 <body>
 
-<% include ../partials/nav %>
+<% include ../partials/nav_min %>
 
 <!--Start Resume Page Content-->
 
@@ -13,19 +13,19 @@
     <div class="row mb-3"></div>
     <div class="row">
 
-        <div class="col-sm-auto">
-            <div class="card text-white bg-secondary mb-3">
-                <div class="card-header">EDUCATION / CERTIFICATIONS</div>
-                <div class="card-body">
-                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> Portland State University,
-                        Project Management</p>
-                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</p>
-                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)
-                    </p>
-                </div>
-            </div>
-            <div id="scroll-list" class="card mb-3"></div>
-        </div>
+        <!--<div class="col-sm-auto">-->
+            <!--<div class="card text-white bg-secondary mb-3">-->
+                <!--<div class="card-header">EDUCATION / CERTIFICATIONS</div>-->
+                <!--<div class="card-body">-->
+                    <!--<p class="card-text small"><span class="fa fa-check-circle-o"></span> Portland State University,-->
+                        <!--Project Management</p>-->
+                    <!--<p class="card-text small"><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</p>-->
+                    <!--<p class="card-text small"><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)-->
+                    <!--</p>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div id="scroll-list" class="card mb-3"></div>-->
+        <!--</div>-->
 
         <!--Start dynamic resume-->
 
