--- a/views/pages/baelic.ejs
+++ b/views/pages/baelic.ejs
@@ -15,15 +15,31 @@
 
 
         <div class="col-sm-auto">
-            <div id="scroll-list" class="card mb-3"></div>
+            <div id="scroll-list" class="card mb-3">
+                <div class="card mb-3">
+                    <a class="list-group-item list-group-item-action small" href="#list-item-0"><h5>Beginnings and Endings</h5></a>
+                    <a class="list-group-item list-group-item-action small" href="#list-item-1"><h5>Endings and Beginnings</h5></a>
+                    <a class="list-group-item list-group-item-action small" href="#list-item-2"><h5>Home to Heroes</h5></a>
+                </div>
+            </div>
         </div>
 
         <!--Start dynamic resume-->
 
         <div class="col-md">
             <div data-spy="scroll" data-target="#myList" data-offset="0" id="scroll-card">
-                <header></header>
-                <section></section>
+                <header>
+                    <div class="card mb-3">
+                        <h2 class="card-header">Foreword</h2>
+                        <p class="card-body">My name is Baelic al Faar, and I am a Hero</p>
+                        <p class="card-body">…I hope…</p>
+                        <p class="card-body">I record this story in the vain hope that my legacy will be one of good and decency. I pray that my tale will be told to inspire rather than as a warning. But destiny cares not for the wishes of mortals, and though I am long lived, eventually I’ll find myself just as much a victim of time as anyone. At the end of my life, will this account be lost and forgotten? I will tell it anyway, if only for those that traveled with me. They at least deserve to be remembered.</p>
+                        <p class="card-body">The stories of others deserve to be told, but if not by them, then why not by me. I only hope I can do justice to their valor. But how can I convey with mere words the vanity, the foolhardiness, the bullheaded...tenacity? ...The bravery. The pure hearted altruism. The faith and majesty and greatness embodied by them all. Their splendor.</p>
+                        <p class="card-body">I know not. I will simply have to try. Bear with me dear reader; this chronicle will tell the tale of a group of heroes that saved…everything.</p>
+                    </div>
+                </header>
+                <section>test 1</section>
+
             </div>
         </div>
 
