--- a/views/pages/baelic.ejs
+++ b/views/pages/baelic.ejs
@@ -31,11 +31,11 @@
                 <header>
                     <div class="card mb-3">
                         <h2 class="card-header">Foreword</h2>
-                        <p class="card-body">My name is Baelic al Faar, and I am a Hero</p>
-                        <p class="card-body">…I hope…</p>
-                        <p class="card-body">I record this story in the vain hope that my legacy will be one of good and decency. I pray that my tale will be told to inspire rather than as a warning. But destiny cares not for the wishes of mortals, and though I am long lived, eventually I’ll find myself just as much a victim of time as anyone. At the end of my life, will this account be lost and forgotten? I will tell it anyway, if only for those that traveled with me. They at least deserve to be remembered.</p>
-                        <p class="card-body">The stories of others deserve to be told, but if not by them, then why not by me. I only hope I can do justice to their valor. But how can I convey with mere words the vanity, the foolhardiness, the bullheaded...tenacity? ...The bravery. The pure hearted altruism. The faith and majesty and greatness embodied by them all. Their splendor.</p>
-                        <p class="card-body">I know not. I will simply have to try. Bear with me dear reader; this chronicle will tell the tale of a group of heroes that saved…everything.</p>
+                        <p>My name is Baelic al Faar, and I am a Hero</p>
+                        <p>…I hope…</p>
+                        <p>I record this story in the vain hope that my legacy will be one of good and decency. I pray that my tale will be told to inspire rather than as a warning. But destiny cares not for the wishes of mortals, and though I am long lived, eventually I’ll find myself just as much a victim of time as anyone. At the end of my life, will this account be lost and forgotten? I will tell it anyway, if only for those that traveled with me. They at least deserve to be remembered.</p>
+                        <p>The stories of others deserve to be told, but if not by them, then why not by me. I only hope I can do justice to their valor. But how can I convey with mere words the vanity, the foolhardiness, the bullheaded...tenacity? ...The bravery. The pure hearted altruism. The faith and majesty and greatness embodied by them all. Their splendor.</p>
+                        <p>I know not. I will simply have to try. Bear with me dear reader; this chronicle will tell the tale of a group of heroes that saved…everything.</p>
                     </div>
                 </header>
                 <section>test 1</section>
