--- a/views/pages/baelic.ejs
+++ b/views/pages/baelic.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="bc-body">
 
 <% include ../partials/head %>
 
@@ -9,16 +9,18 @@
 
 <!--Start Resume Page Content-->
 
-<div class="container-fluid">
+<div class="container-fluid bc-body">
     <div class="row mb-3"></div>
     <div class="row">
 
 
         <div class="col-sm-auto">
-            <div id="scroll-list" class="card mb-3">
-                <a class="list-group-item list-group-item-action small" href="#list-item-0">Beginnings and Endings</a>
-                <a class="list-group-item list-group-item-action small" href="#list-item-1">Endings and Beginnings</a>
-                <a class="list-group-item list-group-item-action small" href="#list-item-2">Home to Heroes</a>
+            <div id="scroll-list" class="card mb-3 bc-story">
+                <a class="list-group-item bc-story">Table of Contents</a>
+                <a class="list-group-item list-group-item-action bc-header" href="#list-item-0">Foreword</a>
+                <a class="list-group-item list-group-item-action bc-header" href="#list-item-1">Beginnings and Endings</a>
+                <a class="list-group-item list-group-item-action bc-header" href="#list-item-2">Endings and Beginnings</a>
+                <a class="list-group-item list-group-item-action bc-header" href="#list-item-3">Home to Heroes</a>
             </div>
         </div>
 
@@ -27,17 +29,17 @@
         <div class="col-md">
             <div data-spy="scroll" data-target="#myList" data-offset="0" id="scroll-card">
                 <header>
-                    <div class="card mb-3">
+                    <div class="card mb-3 bc-header">
                         <h2 class="card-header">The Relics of Mormesk</h2>
-                        <div class="card-body">
+                        <div class="card-body bc-story">
                             <em class="card-text small">by Baelic al Faar, Hero/Devil</em>
                         </div>
                     </div>
                 </header>
                 <section>
-                    <div class="card mb-3" id="list-item-0">
+                    <div class="card mb-3 bc-header" id="list-item-0">
                         <h5 class="card-header">Foreword</h5>
-                        <div class="card-body">
+                        <div class="card-body bc-story">
                             <p>My name is Baelic al Faar, and I am a Hero</p>
                             <p>…I hope…</p>
                             <p>I record this story in the vain hope that my legacy will be one of good and decency. I pray that my tale will be told to inspire rather than as a warning. But destiny cares not for the wishes of mortals, and though I am long lived, eventually I’ll find myself just as much a victim of time as anyone. At the end of my life, will this account be lost and forgotten? I will tell it anyway, if only for those that traveled with me. They at least deserve to be remembered.</p>
@@ -46,9 +48,9 @@
                         </div>
                     </div>
 
-                    <div class="card mb-3" id="list-item-1">
+                    <div class="card mb-3 bc-header" id="list-item-1">
                         <h5 class="card-header">Beginnings and Endings</h5>
-                        <div class="card-body">
+                        <div class="card-body bc-story">
                             <p>In order to begin, I must start at previous endings. As happens to many of my kind, I was
                                 abandoned as a babe. As a half-elf, my mixed features were a curse to both my parents. I
                                 have no memory of them and know nothing of their trials, but I must judge them harshly
@@ -173,9 +175,9 @@
                         </div>
                     </div>
 
-                    <div class="card mb-3" id="list-item-2">
+                    <div class="card mb-3 bc-header" id="list-item-2">
                         <h5 class="card-header">Endings and Beginnings</h5>
-                        <div class="card-body">
+                        <div class="card-body bc-story">
                             <p>No rest will not come this night. Already I can feel the first tendrils of dawn
                                 approaching.</p>
                             <p>I rub my tired eyes and look over at the body of my friend. The poison that wracked his
@@ -291,9 +293,9 @@
                         </div>
                     </div>
 
-                    <div class="card mb-3" id="list-item-3">
+                    <div class="card mb-3 bc-header" id="list-item-3">
                         <h5 class="card-header">Home to Heroes</h5>
-                        <div class="card-body">
+                        <div class="card-body bc-story">
                             <em class="card-text small">2019.02.15</em>
                             <p>When the room formed from the nothingness around me, the first thing I noticed was that the dulcimer was gone. This did not surprise me. What did surprise me as I looked down was that the burns on my arms and hands were completely healed, no trace remained. Even that one bit of justice has been denied me. Now there is nothing to remind me of my darkest deeds. No punishment for my crimes.</p>
                             <p>I bitterly mused about the cruelty of my path and then looked up to find myself in strange, but not unfamiliar, surroundings. Office-like in nature, though of a design I’ve never encountered. A strangely smooth ceiling and four comforting walls marked by two doors in the wall opposite me, and a set of double doors in the wall to my right. Several people in neat yet bizarre garments occupied a number of chairs against the two walls not marred by doors. The room contained several low tables between some of the chairs with brightly colored bits of paper spread atop them in a way that attempted, but failed, to be decorative. The setting seemed altogether like some form of reception room for a guildhall, though of what profession I could not say. Next to a glass tank containing several colorful fish, a man sat at a desk clearly making an effort to pretend he was the only person in the room. The clerk, if that is his profession, sat studiously staring at a box-shaped object with some form of magical light coming from the side facing him despite the presence of the motley crew all muttering in the various chairs around the room. There are some things that will always remain the same.</p>
@@ -338,7 +340,7 @@
 
 <script type="text/javascript" src="../../public/js/baelic.js"></script>
 
-<% include ../partials/footer %>
+<% include ../partials/foot_min %>
 
 </body>
 </html>
