Relic support completed

--- a/views/pages/baelic.ejs
+++ b/views/pages/baelic.ejs
@@ -326,6 +326,13 @@
                             <p>Duncan then asked for our help. Will we help him find the unknown relics? Will we be heroes for his cause? Will we become Relic Hunters?</p>
                         </div>
                     </div>
+
+                    <div class="card mb-3 bc-header">
+                        <h5 class="card-header">To Be Continued</h5>
+                        <div class="card-body bc-story">
+                            <em class="card-text small">...</em>
+                        </div>
+                    </div>
                 </section>
 
             </div>
