Relics: Spelling errors fixed

--- a/views/pages/baelic.ejs
+++ b/views/pages/baelic.ejs
@@ -459,9 +459,10 @@
                                 Mormesk started to use the relics to travel. He would go out amongst the planes, and
                                 once beyond the protections afforded by the in-between, his undead form controlled his
                                 actions more than his rational mind. He would return to the baleful actions of his more
-                                evil self. Duncan confessed that it has been a long time since anyone has seen Mormesk
-                                and he fears the worst, that Mormesk has started hunting relics for himself, or worse,
-                                on behalf of someone, or something, more sinister.</p>
+                                evil self. Though usually, eventually, Mormesk could be counted on to return to his
+                                senses and thence to the in-between, Duncan confessed that it has been a long time since
+                                anyone has seen Mormesk and he fears the worst, that Mormesk has started hunting relics
+                                for himself, or worse, on behalf of someone, or something, more sinister.</p>
                             <p>Duncan then asked for our help. Will we help him find the unknown relics? Will we be
                                 heroes for his cause? Will we become Relic Hunters?</p>
                         </div>
